# OS_ex3

./: .gitignore  CMakeLists.txt  Makefile  MapReduceFramework.cpp  MapReduceFramework.h
Sample Client/: SampleClient.cpp
